feat: poison heartbeats (#1676)
